# typer

./: CMakeLists.txt  LICENSE  README.md  build.sh  dict.txt  install.sh  main.cpp  typer
escape/: escape.h
include/: Content.hpp  Element.hpp  WinSize.hpp  Window.hpp
lib/: CMakeLists.txt
lib/include/: Dict.hpp  Keys.hpp  Util.hpp  WordList.hpp
lib/include/elements/: Elements.hpp
lib/include/loop/: Loop.hpp
lib/include/pixel/: Pixel.hpp
lib/include/widget/: Buttom.hpp  CenterWidget.hpp  Graphic.hpp  Input.hpp  Separator.hpp  TextWidget.hpp  Widget.hpp
lib/include/window/: WinSize.hpp  Window.hpp
lib/src/: Util.cpp
lib/src/elements/: Elements.cpp
lib/src/loop/: Loop.cpp
lib/src/widget/: Buttom.cpp  CenterWidget.cpp  Graphic.cpp  Input.cpp  Separator.cpp  TextWidget.cpp
lib/src/window/: Window.cpp
src/: Config.hpp  Window.cpp  main.cpp
src/elements/: Text.cpp
src_old/: main.cpp
src_old/escape/: escape.h
src_old/tui/: Window.cpp
static/: english.txt
tui/: Window.cpp  Window.h
